# pgn-reader

./: README.md  meson.build
examples/: meson.build  statistics.vala
lib/: meson.build  pgn-reader.vala
test/: meson.build  pgn-reader-test.vala  vala-lint.conf
